--- a/.mikutter.yml
+++ b/.mikutter.yml
@@ -1,10 +1,10 @@
 ---
 slug: :mikutter-portable-path
 depends:
-  mikutter: 3.3.3
+  mikutter: 3.3.0
   plugin:
   - gtk
-version: '0.0.1'
-author: 
+version: '0.0.2'
+author: moguno
 name: mikutter-portable-path
 description: コンフィグファイルを別のマシンに移植しても動くように、フルパスを持っている所をなんとかします。
